fix: checkbox overflow

--- a/packages/@testuj.to/react/src/components/Checkbox/styles.css
+++ b/packages/@testuj.to/react/src/components/Checkbox/styles.css
@@ -1,115 +1,118 @@
 .tt-checkbox-container {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .tt-checkbox-container > .tt-checkbox {
-  background-color: white;
-  width: 18px;
-  height: 18px;
-  border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* box-shadow: 0 2px 10px var(--color-text); */
-  border: 2px solid var(--color-border);
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    background-color: white;
+    width: 18px;
+    height: 18px;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* box-shadow: 0 2px 10px var(--color-text); */
+    border: 2px solid var(--color-border);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .tt-checkbox-container > .tt-checkbox > .tt-checkbox-indicator {
-  color: white;
+    color: white;
 }
 
 .tt-checkbox-checkmark {
-  height: 22px;
-  width: 22px;
-  transform: translateY(2px);
+    height: 22px;
+    width: 22px;
+    transform: translateY(2px);
 }
 
 .tt-checkbox[aria-checked="true"] {
-  background-color: var(--color-text);
-  border: 2px solid var(--color-text);
+    background-color: var(--color-text);
+    border: 2px solid var(--color-text);
 }
 
 .tt-checkbox-container > .tt-checkbox-label {
-  /* color: white; */
-  padding-left: 15px;
-  font-size: 15px;
-  line-height: 1;
-  user-select: none;
+    /* color: white; */
+    padding-left: 15px;
+    font-size: 15px;
+    line-height: 1;
+    user-select: none;
 }
 
 .tt-checkbox-container.outlined {
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid var(--color-border);
-  border-radius: 12px;
-  min-height: 48px;
-  padding: 0 16px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--color-border);
+    border-radius: 12px;
+    min-height: 48px;
+    padding: 0 16px;
 }
 
 .tt-checkbox-container.outlined:has(.tt-checkbox[aria-checked="true"]) {
-  position: relative;
-  border: 2px solid var(--color-primary);
-  overflow: hidden;
-  z-index: 2;
+    position: relative;
+    border: 1px solid var(--color-primary);
+    -webkit-box-shadow: 0px 0px 0px 1px var(--color-primary);
+    -moz-box-shadow: 0px 0px 0px 1px var(--color-primary);
+    box-shadow: 0px 0px 0px 1px var(--color-primary);
+    overflow: hidden;
+    z-index: 2;
 }
 
 .tt-checkbox-container.outlined:has(.tt-checkbox[aria-checked="true"])::after {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  content: "";
-  position: absolute;
-  z-index: 1;
-  background-color: var(--color-primary);
-  opacity: 0.2;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    position: absolute;
+    z-index: 1;
+    background-color: var(--color-primary);
+    opacity: 0.2;
 }
 
 .tt-checkbox-container.outlined .tt-checkbox {
-  border: none;
-  background-color: transparent;
-  width: 22px;
-  height: 22px;
+    border: none;
+    background-color: transparent;
+    width: 22px;
+    height: 22px;
 }
 
 .tt-checkbox-container.outlined > .tt-checkbox > .tt-checkbox-indicator {
-  color: var(--color-primary);
+    color: var(--color-primary);
 }
 
 .tt-checkbox-label.outlined {
-  color: var(--color-text);
-  margin-right: 1rem;
-  padding-left: 0;
+    color: var(--color-text);
+    margin-right: 0.1rem;
+    padding-left: 0;
 }
 
 .tt-checkbox-container.framed {
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px solid var(--color-border);
-  border-radius: 8px;
-  height: 36px;
-  padding: 0 16px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid var(--color-border);
+    border-radius: 8px;
+    min-height: 36px;
+    padding: 0 16px;
 }
 
 .tt-checkbox-label.framed {
-  color: var(--color-text);
-  margin-right: 1rem;
-  padding-left: 0;
-  font: var(--font-normal-14);
+    color: var(--color-text);
+    margin-right: 1rem;
+    padding-left: 0;
+    font: var(--font-normal-14);
 }
 
 .tt-checkbox.framed {
-  width: 18px;
-  height: 18px;
+    width: 18px;
+    height: 18px;
 }
 
 .tt-checkbox.framed[aria-checked="false"] > .tt-checkbox-label.framed {
-  color: var(--color-text-secondary);
+    color: var(--color-text-secondary);
 }
